--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" type="module" defer></script>
+
     <title>GitFav</title>
 </head>
 <body>
@@ -13,11 +18,11 @@
     <header>
       <img src="./src/assets/Gitfav.svg" alt="GitFav Logo">
       <div class="search">
-        <label class="sr-only" for="input-search">Usuário do Github</label>
-        <input id="input-search" type="text" placeholder="Usuário do Github">
+        <label class="sr-only" for="input-search">Digite o Github username que quer favoritar</label>
+        <input id="input-search" type="text" placeholder="Digite o Github username que quer favoritar">
         <button>
             <img src="./src/assets/star.svg" alt="">
-            Favorite
+            FAVORITAR
         </button>
       </div>
     </header>
