--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
         </button>
       </div>
     </header>
-    <table>
-      <thead>
-        <tr>
-          <th>User</th>
-          <th>Repositories</th>
-          <th>Followers</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+    <div class="table">
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Repositories</th>
+            <th>Followers</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+
+      <div class="empty-state hide">
+        <div class="no-favs">
+          <img src="./src/assets/Estrela.svg" alt="star">
+          <h2>Nenhum favorito ainda</h2>
+        </div>
+      </div>
+    </div>
+</div>
 </body>
 </html>
